...
    struct Payload {}


    // MARK: Constants

    enum Constant {
        static let title = "근무시간"
        static let buildNotifyTime = { (time: Int?, dayBefore: Int) -> String in
            guard let time = time else {
                return "꺼짐"
            }
            let dayDescription: String
            switch dayBefore {
...
    let tableView = UITableView(frame: .zero, style: .grouped)

    let profileCell = UITableViewCell().then {
        $0.selectionStyle = .none
    }
    let signinCell = UITableViewCell().then {
        $0.textLabel?.text = "로그인"
        $0.textLabel?.textColor = UIColor.compat.link
    }
    let signoutCell = UITableViewCell().then {
        $0.textLabel?.text = "로그아웃"
    }
    let selectCalendarCell = UITableViewCell().then {
        $0.textLabel?.text = "캘린더를 선택하세요"
        $0.accessoryType = .disclosureIndicator
    }
    let selectedCalendarCell = UITableViewCell().then {
        $0.accessoryType = .disclosureIndicator
    }
    let eventTitleCell = UITableViewCell().then {
        $0.selectionStyle = .none
    }
    let eventTitleField = PaddedTextField().then {
        $0.accessibilityIdentifier = "일정 제목 필드"
        $0.placeholder = "일정 제목 (필수)"
        $0.contentInsets = Metric.eventTitleFieldContentInsets
    }
    let notificationScheduleCell = UITableViewCell(style: .value1, reuseIdentifier: nil).then {
        $0.textLabel?.text = "알림 시각"
        $0.accessoryType = .disclosureIndicator
    }
    let notifyNowCell = UITableViewCell().then {
        $0.textLabel?.text = "지금 알림 받아보기"
    }
    let appInformationCell = UITableViewCell().then {
        $0.textLabel?.text = "Worktime 정보"
        $0.accessoryType = .disclosureIndicator
    }
    let openSourceLicenseCell = UITableViewCell().then {
...
